--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
             <img src="img/production-img1.png" alt="Sustainable Soy" class="w-75">
         </div>
         <div class="col-md-6 mt-4 mt-md-0">
-            <h1 class="fw-bold">Menggunakan Kedelai A.S. Berkelanjutan.</h1>
+            <h1 class="fw-bold">Menggunakan Kedelai A.S. yang Berkelanjutan.</h1>
             <h6 class="mt-3" style="color: #fb9126;">Tempe Oishi - Tempe Higienis Siap Makan dari Rumah Tempe Jabal Nur Sentul.</h6>            
             <div class="text-secondary">
                     <p>Menggunakan kedelai dari petani Amerika Serikat yang peduli keberlanjutan lingkungan.</p>
@@ -132,7 +132,7 @@
                 </div>
                 <div class="d-flex gap-3 align-items-center">
                     <i class="fa-solid fa-phone"></i>
-                    <a href="https://wa.me/62895405680105" class="text-white text-decoration-none" target="_blank">0895405680105</a>
+                    <a href="https://wa.me/62895405680105" class="text-white text-decoration-none" target="_blank">0895405680105 a.n Yatman</a>
                 </div>
             </div>
             <div class="col-md-6 fs-5">
