--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 </div>
                 <div class="d-flex gap-3 align-items-center">
                     <i class="fa-solid fa-phone"></i>
-                    <a href="https://wa.me/62895405680105" class="text-white text-decoration-none" target="_blank">0895405680105</a>
+                    <a href="https://wa.me/62895405680105" class="text-white text-decoration-none" target="_blank">0895405680105 a.n Yatman</a>
                 </div>
             </div>
             <div class="col-md-6 fs-5">
